# media-api

./: addons.ts  deno.json  mod.js
.github/workflows/: deploy.yml
lib/: rs_lib.generated.d.ts  rs_lib.generated.js  rs_lib_bg.wasm
routes/: _404.tsx  _app.tsx  index.tsx
rs_lib/: Cargo.toml
rs_lib/src/: lib.rs
rs_lib/src/authentication/: jwt_auth.rs
rs_lib/src/router/: route.rs
rs_lib/src/service/: handler.rs
